# https---github.com-zesheng97-MyQuantProject

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DETAILED_GITHUB_TUTORIAL.md  DIVERGENCE_STRATEGY_OPTIMIZATION.md  GITHUB_WINDOWS_GUIDE.md  GUI_QUICK_START.md  LICENSE  README.md  README_NEW.md  RELEASE_FILES_SUMMARY.md  RELEASE_v3_SUMMARY.md  create.py  debug_krus.py  debug_krus2.py  download_sp500_nasdaq100.py  main.py  pyproject.toml  requirements.txt  reset_python_env_to_base.bat  reset_python_env_to_base.ps1  run_gui.py  setup.py  test_company_info.py  test_fixed_backtest.py  test_system.py  verify_gui_features.py
.VSCodeCounter/2026-03-23_07-10-54/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
Analytics/reporters/: company_info_manager.py  macro_analyzer.py  periodicity_analyzer.py  sharpe_rating.py
Core_Bus/: standard.py
Data_Hub/fetchers/: batch_yf_update.py  yf_downloader.py
Data_Hub/model_registry/: features_20260323_061935.pkl  metadata_20260323_052034.json  metadata_20260323_052109.json  metadata_20260323_052248.json  metadata_20260323_052617.json  metadata_20260323_052701.json  metadata_20260323_052902.json  metadata_20260323_052943.json  metadata_20260323_053115.json  metadata_20260323_053257.json  metadata_20260323_053340.json  metadata_20260323_054224.json  metadata_20260323_054536.json  metadata_20260323_055338.json  metadata_20260323_055510.json  metadata_20260323_060049.json  metadata_20260323_060607.json  metadata_20260323_060619.json  metadata_20260323_060624.json  metadata_20260323_061935.json  metadata_20260323_062718.json  metadata_20260402_193625.json  registry.csv  xgboost_20260323_052034.json  xgboost_20260323_052248.json  xgboost_20260323_052902.json  xgboost_20260323_053115.json  xgboost_20260323_054224.json  xgboost_20260323_060049.json  xgboost_20260323_060624.json  xgboost_20260323_062718.json  xgboost_20260402_193625.json
Engine_Matrix/: __init__.py  advanced_simulator.py  backtest_engine.py
GUI_Client/: app.py  app_v2.py  xgboost_worker.py
Strategy_Pool/: krus_grid_search.py  strategies.py
Strategy_Pool/custom/: API_REFERENCE.md  INTEGRATION_GUIDE.md  XGBOOST_ML_STRATEGY_GUIDE.md  cyclical_strategies.py  mean_reversion_volatility.py  model_analytics.py  model_manager.py  xgboost_ml_strategy.py
docs/: NAVIGATION_MAP.md  QUICKSTART.md  QUICK_REFERENCE.md  krus_grid_search_results.csv
docs/CODE_REVIEW/: CODE_REVIEW_ACTIONABLE_FIXES_2026_03_23.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_COMPREHENSIVE_v3.md  CODE_REVIEW_DETAILED_APP_V2.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  CODE_REVIEW_FINAL_SUMMARY_2026_03_23.md  CODE_REVIEW_QUICK_REFERENCE.md  COMPREHENSIVE_CODE_REVIEW_2026_03_23.md
docs/FIXES/: BEFORE_AFTER_COMPARISON.md  BUG_FIXES_REPORT_v2.1.1.md  CRITICAL_FIXES_CHECKLIST.md  FINAL_CHECKLIST.md  FINAL_VERIFICATION_CHECKLIST.md
docs/GITHUB/: GITHUB_QUICK_REFERENCE.md  GITHUB_RELEASE_CHECKLIST.md  github_release.sh
shared/: __init__.py  memory_manager.py
tests/: ADVANCED_SIMULATOR_README.py  comprehensive_indent_fix.py  debug_krus.py  debug_krus2.py  fix_chart_indentation.py  fix_else_block.py  fix_indentation.py  fix_indentation_error.py  fix_remaining_indent.py  fix_simple_mode_indent.py  smart_indent_fix.py  test_advanced_simple.py  test_advanced_simulator.py  test_backtest_charts.py  test_fixed_backtest.py  test_fixes.py  test_mean_reversion_enhancement.py  test_mean_reversion_fix.py  test_mean_reversion_strategy.py  test_new_features.py  test_system.py  test_xgboost_system.py  verify_gui.py  verify_gui_xgboost.py
utils/: __init__.py  safe_access.py  type_validator.py
(+28 files in other folders)
